add MapsScreen, ProfileScreen, SettingsScreen, Rewrite Logic Navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,21 @@
     <string name="menu_home">Beranda</string>
     <string name="menu_maps">Peta</string>
     <string name="menu_profile">Profil</string>
+
+    <string name="permission_location_rationale">This app requires the location permission to be
+    granted.</string>
+    <string name="back_button">Kembali</string>
+    <string name="create_new_account">Buat Akun Baru</string>
+    <string name="full_name">Nama Lengkap</string>
+    <string name="enter_your_name">Masukkan nama</string>
+    <string name="email_address">Alamat Email</string>
+    <string name="sample_email">email@gmail.com</string>
+    <string name="enter_password">Masukkan Kata Sandi</string>
+    <string name="enter_your_password">Masukkan Kata Sandi</string>
+    <string name="create_password">Buat Kata Sandi</string>
+    <string name="create_your_password">Buat Kata Sandi</string>
+    <string name="sign_up">Daftar</string>
+    <string name="welcome_back">Selamat datang kembali</string>
+    <string name="sign_in">Login</string>
+    <string name="remember_me">Ingat saya</string>
 </resources>
